@@ -53,13 +53,10 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintStream;
 import java.io.PrintWriter;
-import java.nio.charset.Charset;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.text.MessageFormat;
 import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -157,7 +154,7 @@ public abstract class FS {
 
 	private volatile Holder<File> userHome;
 
-	private volatile Holder<File> gitSystemConfig;
+	private volatile Holder<File> gitPrefix;
 
 	/**
 	 * Constructs a file system abstraction.
@@ -174,7 +171,7 @@ public abstract class FS {
 	 */
 	protected FS(FS src) {
 		userHome = src.userHome;
-		gitSystemConfig = src.gitSystemConfig;
+		gitPrefix = src.gitPrefix;
 	}
 
 	/** @return a new instance of the same type of FS. */
@@ -406,41 +403,16 @@ public abstract class FS {
 	 * @param command
 	 *            as component array
 	 * @param encoding
-	 *            to be used to parse the command's output
 	 * @return the one-line output of the command
 	 */
 	protected static String readPipe(File dir, String[] command, String encoding) {
-		return readPipe(dir, command, encoding, null);
-	}
-
-	/**
-	 * Execute a command and return a single line of output as a String
-	 *
-	 * @param dir
-	 *            Working directory for the command
-	 * @param command
-	 *            as component array
-	 * @param encoding
-	 *            to be used to parse the command's output
-	 * @param env
-	 *            Map of environment variables to be merged with those of the
-	 *            current process
-	 * @return the one-line output of the command
-	 * @since 4.0
-	 */
-	protected static String readPipe(File dir, String[] command, String encoding, Map<String, String> env) {
 		final boolean debug = LOG.isDebugEnabled();
 		try {
 			if (debug) {
 				LOG.debug("readpipe " + Arrays.asList(command) + "," //$NON-NLS-1$ //$NON-NLS-2$
 						+ dir);
 			}
-			ProcessBuilder pb = new ProcessBuilder(command);
-			pb.directory(dir);
-			if (env != null) {
-				pb.environment().putAll(env);
-			}
-			final Process p = pb.start();
+			final Process p = Runtime.getRuntime().exec(command, null, dir);
 			final BufferedReader lineRead = new BufferedReader(
 					new InputStreamReader(p.getInputStream(), encoding));
 			p.getOutputStream().close();
@@ -517,77 +489,34 @@ public abstract class FS {
 		return null;
 	}
 
-	/**
-	 * @return the path to the Git executable or {@code null} if it cannot be
-	 *         determined.
-	 * @since 4.0
-	 */
-	protected abstract File discoverGitExe();
-
-	/**
-	 * @return the path to the system-wide Git configuration file or
-	 *         {@code null} if it cannot be determined.
-	 * @since 4.0
-	 */
-	protected File discoverGitSystemConfig() {
-		File gitExe = discoverGitExe();
-		if (gitExe == null) {
-			return null;
+	/** @return the $prefix directory C Git would use. */
+	public File gitPrefix() {
+		Holder<File> p = gitPrefix;
+		if (p == null) {
+			String overrideGitPrefix = SystemReader.getInstance().getProperty(
+					"jgit.gitprefix"); //$NON-NLS-1$
+			if (overrideGitPrefix != null)
+				p = new Holder<File>(new File(overrideGitPrefix));
+			else
+				p = new Holder<File>(discoverGitPrefix());
+			gitPrefix = p;
 		}
-
-		// Trick Git into printing the path to the config file by using "echo"
-		// as the editor.
-		Map<String, String> env = new HashMap<>();
-		env.put("GIT_EDITOR", "echo"); //$NON-NLS-1$ //$NON-NLS-2$
-
-		String w = readPipe(gitExe.getParentFile(),
-				new String[] { "git", "config", "--system", "--edit" }, //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
-				Charset.defaultCharset().name(), env);
-		if (StringUtils.isEmptyOrNull(w)) {
-			return null;
-		}
-
-		return new File(w);
+		return p.value;
 	}
 
-	/**
-	 * @return the currently used path to the system-wide Git configuration
-	 *         file or {@code null} if none has been set.
-	 * @since 4.0
-	 */
-	public File getGitSystemConfig() {
-		if (gitSystemConfig == null) {
-			gitSystemConfig = new Holder<File>(discoverGitSystemConfig());
-		}
-		return gitSystemConfig.value;
-	}
+	/** @return the $prefix directory C Git would use. */
+	protected abstract File discoverGitPrefix();
 
 	/**
-	 * Set the path to the system-wide Git configuration file to use.
+	 * Set the $prefix directory C Git uses.
 	 *
-	 * @param configFile
-	 *            the path to the config file.
+	 * @param path
+	 *            the directory. Null if C Git is not installed.
 	 * @return {@code this}
-	 * @since 4.0
 	 */
-	public FS setGitSystemConfig(File configFile) {
-		gitSystemConfig = new Holder<File>(configFile);
+	public FS setGitPrefix(File path) {
+		gitPrefix = new Holder<File>(path);
 		return this;
-	}
-
-	/**
-	 * @param grandchild
-	 * @return the parent directory of this file's parent directory or
-	 *         {@code null} in case there's no grandparent directory
-	 * @since 4.0
-	 */
-	protected static File resolveGrandparentFile(File grandchild) {
-		if (grandchild != null) {
-			File parent = grandchild.getParentFile();
-			if (parent != null)
-				return parent.getParentFile();
-		}
-		return null;
 	}
 
 	/**
@@ -972,7 +901,7 @@ public abstract class FS {
 	}
 
 	/**
-	 * Initialize a ProcessBuilder to run a command using the system shell.
+	 * Initialize a ProcesssBuilder to run a command using the system shell.
 	 *
 	 * @param cmd
 	 *            command to execute. This string should originate from the
